# techstars-demo

./: .gitignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: demo.yml
src/: app.py  pyproject.toml
src/flask_app/: app.py
src/flask_app/templates/: data.html
tests/: test_docker.py  test_index.py  test_src2.py
