[tool.poetry]
name = "flask_app"
version = "0.1.0"
description = "A demo Flask app."
authors = ["Zachary Braun <zacharytbraun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.0"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
plotly = "^5.5.0"

[tool.poetry.dev-dependencies]
requests = "^2.26.0"
pytest = "^6.2.5"
pytest-benchmark = "^3.4.1"
psutil = "^5.8.0"
Pympler = "^0.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"